--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using deferat
-@using deferat.Models
+﻿@using Deferat
+@using Deferat.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
