--- a/Views/Posts/Post.cshtml
+++ b/Views/Posts/Post.cshtml
@@ -1,3 +1,10 @@
 @model PostModel
 
-@Html.Raw(Model.Content)
+<div class="container">
+
+    <h1 class="mt-5">@Model.Title</h1>
+
+    @Html.Raw(Model.Content)
+
+</div>
+
