--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,144 +3,36 @@
 }
 
 
-<section style="background: url('images/frank-mckenna-150516-unsplash.jpg'); background-size: cover; background-position: center center" class="hero">
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron" style="background: url('images/frank-mckenna-150516-unsplash.jpg'); background-size: cover; background-position: center center">
+        <div class="container">
+            <h1 class="display-3">James' Blog</h1>
+            <p>Write some blurb here</p>
+        </div>
+    </div>
+
     <div class="container">
-      <div class="row">
-          <div class="col-lg-7">
-          <h1>James' Blog title!</h1><a href="#" class="hero-link">Discover More</a>
-          </div>
-      </div>
-    </div>
-</section>
- <!-- Intro Section-->
-<section class="intro">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8">
-        <h2 class="h3">Some great intro here</h2>
-        <p class="text-big">Place a nice <strong>introduction</strong> here <strong>to catch reader's attention</strong>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderi.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="featured-posts no-padding-top">
-  <div class="container">
-    <!-- Post-->
-    <div class="row d-flex align-items-stretch">
-      <div class="text col-lg-7">
-        <div class="text-inner d-flex align-items-center">
-          <div class="content">
-            <header class="post-header">
-              <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
-                <h2 class="h4">Alberto Savoia Can Teach You About Interior</h2></a>
-            </header>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrude consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-            <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                <div class="avatar"><img src="img/avatar-1.jpg" alt="..." class="img-fluid"></div>
-                <div class="title"><span>John Doe</span></div></a>
-              <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-              <div class="comments"><i class="icon-comment"></i>12</div>
-            </footer>
-          </div>
+        <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div>
         </div>
-      </div>
-      <div class="image col-lg-5"><img src="img/featured-pic-1.jpeg" alt="..."></div>
-    </div>
-    <!-- Post        -->
-    <div class="row d-flex align-items-stretch">
-      <div class="image col-lg-5"><img src="img/featured-pic-2.jpeg" alt="..."></div>
-      <div class="text col-lg-7">
-        <div class="text-inner d-flex align-items-center">
-          <div class="content">
-            <header class="post-header">
-              <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
-                <h2 class="h4">Alberto Savoia Can Teach You About Interior</h2></a>
-            </header>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrude consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-            <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                <div class="avatar"><img src="img/avatar-2.jpg" alt="..." class="img-fluid"></div>
-                <div class="title"><span>John Doe</span></div></a>
-              <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-              <div class="comments"><i class="icon-comment"></i>12</div>
-            </footer>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Post                            -->
-    <div class="row d-flex align-items-stretch">
-      <div class="text col-lg-7">
-        <div class="text-inner d-flex align-items-center">
-          <div class="content">
-            <header class="post-header">
-              <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
-                <h2 class="h4">Alberto Savoia Can Teach You About Interior</h2></a>
-            </header>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrude consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-            <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                <div class="avatar"><img src="img/avatar-3.jpg" alt="..." class="img-fluid"></div>
-                <div class="title"><span>John Doe</span></div></a>
-              <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-              <div class="comments"><i class="icon-comment"></i>12</div>
-            </footer>
-          </div>
-        </div>
-      </div>
-      <div class="image col-lg-5"><img src="img/featured-pic-3.jpeg" alt="..."></div>
-    </div>
-  </div>
-</section>
-<!-- Divider Section-->
-<section style="background: url(images/divider-bg.jpg); background-size: cover; background-position: center bottom" class="divider">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h2><a href="#" class="hero-link">View More</a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Latest Posts -->
-<section class="latest-posts"> 
-  <div class="container">
-    <header> 
-      <h2>Latest from the blog</h2>
-      <p class="text-big">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-    </header>
-    <div class="row">
-      <div class="post col-md-4">
-        <div class="post-thumbnail"><a href="post.html"><img src="img/blog-1.jpg" alt="..." class="img-fluid"></a></div>
-        <div class="post-details">
-          <div class="post-meta d-flex justify-content-between">
-            <div class="date">20 May | 2016</div>
-            <div class="category"><a href="#">Business</a></div>
-          </div><a href="post.html">
-            <h3 class="h4">Ways to remember your important ideas</h3></a>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-        </div>
-      </div>
-      <div class="post col-md-4">
-        <div class="post-thumbnail"><a href="post.html"><img src="img/blog-2.jpg" alt="..." class="img-fluid"></a></div>
-        <div class="post-details">
-          <div class="post-meta d-flex justify-content-between">
-            <div class="date">20 May | 2016</div>
-            <div class="category"><a href="#">Technology</a></div>
-          </div><a href="post.html">
-            <h3 class="h4">Diversity in Engineering: Effect on Questions</h3></a>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-        </div>
-      </div>
-      <div class="post col-md-4">
-        <div class="post-thumbnail"><a href="post.html"><img src="img/blog-3.jpg" alt="..." class="img-fluid"></a></div>
-        <div class="post-details">
-          <div class="post-meta d-flex justify-content-between">
-            <div class="date">20 May | 2016</div>
-            <div class="category"><a href="#">Financial</a></div>
-          </div><a href="post.html">
-            <h3 class="h4">Alberto Savoia Can Teach You About Interior</h3></a>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
+        <hr>
+
+    </div> <!-- /container -->
+
+</main>
