Show posts on front page

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,15 +1,35 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Montserrat:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 
-/* Move down content because we have a fixed navbar that is 3.5rem tall */
-body {
-    padding-top: 3.5rem;
+
+html {
+    position: relative;
+    min-height: 100%;
 }
 
 body {
+    /* Move down content because we have a fixed navbar that is 3.5rem tall */
+    padding-top: 3.5rem;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
     font-family: 'Montserrat', sans-serif !important;
 }
 
 h1, h2, .navbar-brand {
     font-family: 'Merriweather', serif !important;
+}
+
+h1 a, h1 a:active, h1 a:visited, h1 a:hover,
+h2 a, h2 a:active, h2 a:visited, h2 a:hover {
+    text-decoration: none;
+    color: inherit
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
 }
