--- a/Views/Posts/ViewPost.cshtml
+++ b/Views/Posts/ViewPost.cshtml
@@ -1,6 +1,6 @@
-@model PostModel
+@model Post
 
-<div class="container">
+<div class="container convert-emoji">
 
     <h1 class="mt-5">@Model.Title</h1>
 
