--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -13,8 +13,10 @@
 
     <!-- Google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:300,400,700">
 
+    <!-- EmojiOne -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emojione@4.0.0/extras/css/emojione.min.css"/>
 
     <!-- Dracula theme for Highlight.js-->
     <link rel="stylesheet" href="~/css/dracula.css" />
@@ -49,7 +51,7 @@
                         <a asp-area="" asp-controller="Posts" asp-action="Index" class="nav-link">Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link ">Contact</a>
+                        <a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
@@ -82,6 +84,9 @@
     <!-- Highlight.js -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
+    <!-- EmojiOne -->
+    <script src="https://cdn.jsdelivr.net/npm/emojione@4.0.0/lib/js/emojione.min.js"></script>
 
     <!-- Custom JS -->
     <environment include="Development">
