Added Tags and better text styling

--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -3,6 +3,13 @@
 
 <div class="container">
 
+    @if (Model.Posts.Count() == 0)
+    {
+        <div class="row mt-5 lead text-center">
+            Nothing to see here!
+        </div>
+    }
+
     @foreach (var post in Model.Posts)
     {
     <div class="row mt-5">
