--- a/Views/Shared/Components/PostDetails/Default.cshtml
+++ b/Views/Shared/Components/PostDetails/Default.cshtml
@@ -6,5 +6,11 @@
 </div> -->
 <div class="text-right mt-2">
     @Model.Post.Date.ToShortDateString()<br />  
-    <span class="font-weight-bold">@Model.Author.DisplayName</span>
+    <span class="font-weight-bold">@Model.Author.DisplayName</span><br />
+    @foreach (var tag in Model.Post.Categories)
+    {
+        <a asp-controller="Posts" asp-action="Index" asp-route-tag="@tag" class="badge badge-pill badge-primary">
+            @tag
+        </a>
+    }
 </div>
