Partial view for posts
Mess with styling a bit

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacy";
 }
-<h2>@ViewData["Title"]</h2>
+<div class="container">
+    <h1 class="mt-5">@ViewData["Title"]</h1>
+    <p>Use this page to detail your site's privacy policy.</p>
+</div>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+
+
