--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,31 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron" style="background: url('images/frank-mckenna-150516-unsplash.jpg'); background-size: cover; background-position: center center">
+    <div class="jumbotron jumbotron-main text-white" >
         <div class="container">
-            <h1 class="display-3">James' Blog</h1>
-            <p>Write some blurb here</p>
+            <div class="row">
+                <div class="col-sm-2">
+                    <img src="images/deferat-dark.png" class="img-fluid" />
+                </div>
+                <div class="col-sm-10">
+                    <h1 class="display-3">Deferat</h1>
+                    <p class="lead">The blog of James Naylor</p>
+                </div>
+            </div>
+            
+            
         </div>
     </div>
 
     <div class="container">
-        <!-- Example row of columns -->
         <div class="row">
             @foreach (var post in (IEnumerable<Post>)ViewData["Posts"])
             {
                 <div class="col-md-4 convert-emoji">
-                    <h2><a asp-controller="Posts" asp-action="ViewPost" asp-route-id="@post.Locator">@post.Title</a></h2>                    
+                    <h2><a asp-controller="Posts" asp-action="Read" asp-route-id="@post.Locator">@post.Title</a></h2>                    
                     <p>@Html.Raw(post.ShortContent)</p>
-                    <p><a asp-controller="Posts" asp-action="ViewPost" asp-route-id="@post.Locator">Read...</a></p>
+                    <p><a asp-controller="Posts" asp-action="Read" asp-route-id="@post.Locator">Read...</a></p>
                 </div>
             }
         </div>
-
-        <hr>
-
-    </div> <!-- /container -->
+        <hr />
+    </div> 
 
 </main>
+
+<script type="text/javascript">
+    unSplash
+</script>
