--- a/Views/Posts/Index.cshtml
+++ b/Views/Posts/Index.cshtml
@@ -1,5 +1,9 @@
 @model PostsViewModel
 
+@{
+    ViewData["Title"] = "Posts";
+}
+
 
 <div class="container">
 
@@ -12,32 +16,21 @@
 
     @foreach (var post in Model.Posts)
     {
-    <div class="row mt-5">
-            <div class="col-sm-2">
-                @await Component.InvokeAsync("PostDetails", new { post = post })
-            </div>
-            <div class="col-sm-10 convert-emoji">
+        @await Html.PartialAsync("_Post", post)
+    }
 
-                <h1><a asp-controller="Posts" asp-action="ViewPost" asp-route-id="@post.Locator">@post.Title</a></h1>
-
-                @Html.Raw(post.Content)
-            </div>
+    <div class="row">
+        <div class="col-sm-6">
+            @if (Model.CurrentPage < Model.PageCount)
+            {
+                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
+            }
         </div>
-
-        }
-
-        <div class="row">
-            <div class="col-sm-6">
-                @if (Model.CurrentPage < Model.PageCount)
-                {
-                    <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
-                }
-            </div>
-            <div class="col-sm-6 text-right">
-                @if (Model.CurrentPage > 1)
-                {
-                    <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
-                }
-            </div>
+        <div class="col-sm-6 text-right">
+            @if (Model.CurrentPage > 1)
+            {
+                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
+            }
         </div>
     </div>
+</div>
