Finished first article 🎉
Couple of styling fixes

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                         <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-area="" asp-controller="Posts" asp-action="Index" asp-route-tag="" class="nav-link">Posts</a>
+                        <a asp-area="" asp-controller="Posts" asp-action="Index" asp-route-tag="" asp-route-pagenumber="1" class="nav-link">Posts</a>
                     </li>
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Home" asp-action="About" class="nav-link">About</a>
