--- a/Views/Shared/_Post.cshtml
+++ b/Views/Shared/_Post.cshtml
@@ -14,7 +14,7 @@
             }
         </div>
     </div>
-    <div class="col-sm-10">
+    <div class="col-sm-10 article">
 
         <h1><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Locator">@Model.Title</a></h1>
 
