--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -13,14 +13,12 @@
     {
         <div class="row">
             <div class="col-sm-3">
-                <div class="card border-0 shadow">
-                    <img class="card-img" src="../images/@author.Image" />
-                    <div class="card-body text-center">
-                        <h5 class="card-title">@author.DisplayName</h5>
-                        <div class="card-text text-black-50">
-                            <a href="https://twitter.com/@author.Twitter/"><i class="fab fa-twitter"></i> &commat;@author.Twitter</a> | 
-                            <a href="https://github.com/@author.Github/"><i class="fab fa-github"></i> @author.Github</a>
-                        </div>
+                <img class="card-img rounded-circle shadow" src="../images/@author.Image" />
+                <div class="text-center">
+                    <h5>@author.DisplayName</h5>
+                    <div>
+                        <a href="https://twitter.com/@author.Twitter/"><i class="fab fa-twitter"></i> &commat;@author.Twitter</a> | 
+                        <a href="https://github.com/@author.Github/"><i class="fab fa-github"></i> @author.Github</a>
                     </div>
                 </div>
             </div>
