--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,28 +17,19 @@
             
             
         </div>
-    </div>
+    </div> 
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
-            @foreach (var post in (IEnumerable<Post>)ViewData["Posts"])
+            <div class="col-md-12 d-flex align-items-stretch">
+                    @await Html.PartialAsync("_PostCard", ((IEnumerable<Post>)ViewData["Posts"]).First())
+                </div>
+        </div>
+        <div class="row">
+            @foreach (var post in ((IEnumerable<Post>)ViewData["Posts"]).Skip(1))
             {
                 <div class="col-md-4 d-flex align-items-stretch">
-                    <div class="card">
-                        <div class="card-img-wrapper">
-                            <img class="card-img-top img-fluid" src="@post.Image" />
-                        </div>
-                        <div class="card-body convert-emoji">
-                            <h3 class="card-title"><a asp-controller="Posts" asp-action="Read" asp-route-id="@post.Locator">@post.Title</a></h3>                    
-                            <div>
-                                @Html.Raw(post.ShortContent)
-                            </div>
-                            
-                        </div>
-                        <div class="card-footer">
-                            <a asp-controller="Posts" asp-action="Read" asp-route-id="@post.Locator" class="btn btn-primary">Read</a>
-                        </div>
-                    </div>
+                    @await Html.PartialAsync("_PostCard", post)
                 </div>
             }
         </div>
