--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-sm-3">
-                @Html.Raw(author.Blurb)
+                @Html.Raw(author.Html)
             </div>
         </div>
     }
