--- a/Views/Shared/_Post.cshtml
+++ b/Views/Shared/_Post.cshtml
@@ -16,14 +16,14 @@
     </div>
     <div class="col-sm-10 article">
 
-        <h1><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Locator" class="display-4">@Model.Title</a></h1>
+        <h1><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Id" class="display-4">@Model.Title</a></h1>
         @if (ViewData["Short"] != null)
         {
             @Html.Raw(Model.ShortContent)
         }
         else
         {
-            @Html.Raw(Model.Content)
+            @Html.Raw(Model.Html)
         }
     </div>
 </div>
