Rebrand jamesnaylor.dev
Add rich previews

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home";
+    ViewData["Description"] = "Programming blog";
+    ViewData["Image"] = $"https://{Context.Request.Host}/images/cristian-palmer-716730-unsplash.jpg";
 }
 
 
@@ -10,8 +12,8 @@
                     <img src="images/deferat-dark.png" class="img-fluid" />
                 </div>
                 <div class="col-sm-10">
-                    <h1 class="display-3">Deferat</h1>
-                    <p class="lead">James Naylor's Programming Blog</p>
+                    <h1 class="display-3">James<span class="text-info">Naylor</span>.dev</h1>
+                    <p class="lead">Programming blog</p>
                 </div>
             </div>
             
