--- a/Views/Posts/Read.cshtml
+++ b/Views/Posts/Read.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = @Model.Title;
+    ViewData["Description"] = @Model.Description;
+    ViewData["Image"] = $"https://{Context.Request.Host}{Model.Image}";
 }
 
 <div class="jumbotron jumbotron-main text-white" style="background: url('@Model.Image'); " >
