--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>James Naylor - @ViewData["Title"]</title>
+    <title>@ViewData["Title"]</title>
     <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon" />
 
     <!-- Meatadata for Rich Previews -->
-    <meta property="og:title" content='James Naylor - @ViewData["Title"]' />
+    <meta property="og:title" content='@ViewData["Title"]' />
     <meta property="og:description" content='@ViewData["Description"]' />
     <meta property="og:url" content="https://@Context.Request.Host@Context.Request.Path" />
     <meta property="og:image" content='@ViewData["Image"]' />
