--- a/Views/Shared/_PostCard.cshtml
+++ b/Views/Shared/_PostCard.cshtml
@@ -1,17 +1,17 @@
-@model Post
+@model PostViewModel
 
 <div class="card">
     <div class="card-img-wrapper">
-        <img class="card-img-top img-fluid" src="@Model.Image" />
+        <img class="card-img-top img-fluid" src="@Model.Post.Image" />
     </div>
     <div class="card-body convert-emoji">
-        <h4 class="card-title"><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Id">@Model.Title</a></h4>                    
+        <h4 class="card-title"><a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Post.Id">@Model.Post.Title</a></h4>                    
         <div>
-            @Html.Raw(Model.ShortContent)
+            @Html.Raw(Model.Post.ShortContent)
         </div>
         
     </div>
     <div class="card-footer">
-        <a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Id" class="btn btn-primary">Read</a>
+        <a asp-controller="Posts" asp-action="Read" asp-route-id="@Model.Post.Id" class="btn btn-primary">Read</a>
     </div>
 </div>
