--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -15,14 +15,15 @@
             <div class="col-sm-3">
                 <img class="card-img rounded-circle shadow" src="../images/@author.Image" />
                 <div class="text-center">
-                    <h5>@author.DisplayName</h5>
+                    <h4>@author.DisplayName</h4>
                     <div>
-                        <a href="https://twitter.com/@author.Twitter/"><i class="fab fa-twitter"></i> &commat;@author.Twitter</a> | 
-                        <a href="https://github.com/@author.Github/"><i class="fab fa-github"></i> @author.Github</a>
+                        <a href="https://twitter.com/@author.Twitter/"><i class="fab fa-twitter"></i> &commat;@author.Twitter</a> <br />
+                        <a href="https://github.com/@author.Github/"><i class="fab fa-github"></i> @author.Github</a> <br />
+                        <a href="https://www.linkedin.com/in/@author.LinkedIn/"><i class="fab fa-linkedin"></i> @author.DisplayName</a> <br />
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-9">
                 @Html.Raw(author.Html)
             </div>
         </div>
