Fix card layouts and images on mobile

--- a/src/Views/Shared/_PostCard.cshtml
+++ b/src/Views/Shared/_PostCard.cshtml
@@ -13,7 +13,7 @@
             @Html.Raw(Model.Post.ShortContent)
         </div>
     </div>
-    <div class="card-footer">
+    <div class="card-footer text-right">
         @foreach (var tag in Model.Post.Categories)
         {
             <a asp-controller="Posts" asp-action="Index" asp-route-tag="@tag" 
