--- a/src/Views/Home/About.cshtml
+++ b/src/Views/Home/About.cshtml
@@ -19,7 +19,7 @@
     @foreach (var author in Model)
     {
         <div class="row mt-5">
-            <div class="col-sm-3">
+            <div class="col-sm-2 offset-sm-1">
                 <img class="card-img rounded-circle shadow" src="../images/@author.Image" />
                 <div class="text-center">
                     <h4>@author.DisplayName</h4>
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-9">
+            <div class="col-sm-8">
                 @Html.Raw(author.Html)
             </div>
         </div>
