--- a/src/Views/Posts/Index.cshtml
+++ b/src/Views/Posts/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="display-3">James<span class="text-info">Naylor</span>.dev</h1>
+                    <h1>James<span class="text-info">Naylor</span>.dev</h1>
                     <p class="lead">Programming blog</p>
                 </div>
             </div>
@@ -32,14 +32,23 @@
             Nothing to see here!
         </div>
     }
-    <div class="card-columns">
-    @foreach (var post in Model.Posts)
+
+    @for (int i = 0; i < @Model.Posts.Count(); i++)
     {
-     
-            @await Html.PartialAsync("_PostCard", post, new ViewDataDictionary(this.ViewData){{"Short", true}})
+        var post = Model.Posts.ElementAt(i);
+
+        if(i == 0 || i % 3 == 0)
+        {
+            @:<div class="card-deck mt-5">
+        }
+
+        @await Html.PartialAsync("_PostCard", post, new ViewDataDictionary(this.ViewData){{"Short", true}})
         
+        if(i == Model.Posts.Count() || i % 3 == 2)
+        {
+            @:</div>
+        }
     }
-    </div>
 
     <div class="row mt-5">
         <div class="col-sm-6">
