--- a/src/Views/Shared/_Post.cshtml
+++ b/src/Views/Shared/_Post.cshtml
@@ -1,9 +1,9 @@
 @model PostViewModel
 
 
-<div class="row convert-emoji mt-4">
+<div class="row convert-emoji mt-2">
     <div class="col-sm-2">
-        <div class="text-right">  
+        <div class="text-right mb-4">  
             <img class="avatar shadow" src="~/images/@Model.AuthorImage" /><br />
             <span class="font-weight-bold">@Model.AuthorName</span><br />
             @Model.Post.Date.ToShortDateString()<br />
