WIP Load site settings from file 🔧

--- a/src/Views/Home/About.cshtml
+++ b/src/Views/Home/About.cshtml
@@ -20,7 +20,7 @@
     {
         <div class="row mt-5">
             <div class="col-sm-2 offset-sm-1">
-                <img class="card-img rounded-circle shadow" src="../images/@author.Image" />
+                <img class="card-img rounded-circle shadow" src="../@author.ImageUrl" />
                 <div class="text-center">
                     <h4>@author.DisplayName</h4>
                     <div>
