--- a/src/Views/Home/Index.cshtml
+++ b/src/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                     <img src="images/deferat-dark.png" class="img-fluid" />
                 </div>
                 <div class="col-sm-10">
-                    <h1 class="display-3">James<span class="text-info">Naylor</span>.dev</h1>
+                    <img src='@ViewData["Logo"]' />
                     <p class="lead">Programming blog</p>
                 </div>
             </div>
