--- a/src/Views/Posts/Index.cshtml
+++ b/src/Views/Posts/Index.cshtml
@@ -1,14 +1,11 @@
 @model PostListViewModel
 
-@{
-    ViewData["Title"] = "JamesNaylor.dev";
-}
 
 <div class="jumbotron jumbotron-main text-white" >
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1>James<span class="text-info">Naylor</span>.dev</h1>
+                    <img src='@ViewData["Logo"]' />
                     <p class="lead">Programming blog</p>
                 </div>
             </div>
