--- a/src/Views/Shared/_PostCard.cshtml
+++ b/src/Views/Shared/_PostCard.cshtml
@@ -22,5 +22,5 @@
             </a>
         }
     </div>
-    <img class="avatar shadow" src="~/images/@Model.AuthorImage" />
+    <img class="avatar shadow" src="~/@Model.AuthorImage" />
 </div>
