--- a/src/Views/Shared/_Post.cshtml
+++ b/src/Views/Shared/_Post.cshtml
@@ -4,7 +4,7 @@
 <div class="row convert-emoji mt-2">
     <div class="col-sm-2">
         <div class="text-right mb-4">  
-            <img class="avatar shadow" src="~/images/@Model.AuthorImage" /><br />
+            <img class="avatar shadow" src="~/@Model.AuthorImage" /><br />
             <span class="font-weight-bold">@Model.AuthorName</span><br />
             @Model.Post.Date.ToShortDateString()<br />
             @foreach (var tag in Model.Post.Categories)
