--- a/src/Views/Posts/Index.cshtml
+++ b/src/Views/Posts/Index.cshtml
@@ -1,77 +1,78 @@
 @model PostListViewModel
 
 
-<div class="jumbotron jumbotron-main text-white" >
+<div class="jumbotron jumbotron-main text-white" style="background: url('images/@Model.Settings.Hero');" >
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <img src='@ViewData["Logo"]' />
-                    <p class="lead">Programming blog</p>
+                    <p class="lead">
+                        @Html.Raw(@Model.Settings.Html)
+                    </p>
+                    </div>
                 </div>
+
+
             </div>
-            
-            
         </div>
-    </div> 
 
-<div class="container">
+    <div class="container">
 
-    @if (!String.IsNullOrWhiteSpace(Model.Tag))
-    {
-        <div class="row mt-5 mb-5 lead text-center">
-            Showing posts for tag &nbsp;<span class="badge badge-pill badge-primary">@Model.Tag</span>
-        </div>
-    }
-
-    @if (Model.Posts.Count() == 0)
-    {
-        <div class="row mt-5 lead text-center">
-            Nothing to see here!
-        </div>
-    }
-
-    @for (int i = 0; i < @Model.Posts.Count(); i++)
-    {
-        var post = Model.Posts.ElementAt(i);
-
-        if(i == 0 || i % 3 == 0)
+        @if (!String.IsNullOrWhiteSpace(Model.Tag))
         {
-            @:<div class="card-deck mt-5">
+            <div class="row mt-5 mb-5 lead text-center">
+                Showing posts for tag &nbsp;<span class="badge badge-pill badge-primary">@Model.Tag</span>
+            </div>
         }
 
-        @await Html.PartialAsync("_PostCard", post)
-        
-        // This will layout our cards in rows of three
-        if(i == Model.Posts.Count()-1 || i % 3 == 2)
+        @if (Model.Posts.Count() == 0)
         {
-            // If it's the final card, add some invisible ones to pad
-            if(i == Model.Posts.Count()-1)
-            {
-                if(i % 3 == 1){
-                    @:<div class="card invisible"></div>
-                }
-                else if(i % 3 == 0)
-                {
-                    @:<div class="card invisible"></div>
-                    @:<div class="card invisible"></div>
-                }
-            }
-            @:</div>
+            <div class="row mt-5 lead text-center">
+                Nothing to see here!
+            </div>
         }
-    }
 
-    <div class="row mt-5">
-        <div class="col-sm-6">
-            @if (Model.CurrentPage < Model.PageCount)
+        @for (int i = 0; i < @Model.Posts.Count(); i++)
+        {
+            var post = Model.Posts.ElementAt(i);
+
+            if(i == 0 || i % 3 == 0)
             {
-                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
-            }
-        </div>
-        <div class="col-sm-6 text-right">
-            @if (Model.CurrentPage > 1)
-            {
-                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
-            }
-        </div>
-    </div>
+                    @:<div class="card-deck mt-5">
+                                }
+
+                                @await Html.PartialAsync("_PostCard", post)
+
+                                // This will layout our cards in rows of three
+                                if(i == Model.Posts.Count()-1 || i % 3 == 2)
+                                {
+                                    // If it's the final card, add some invisible ones to pad
+                                    if(i == Model.Posts.Count()-1)
+                                    {
+                                        if(i % 3 == 1){
+                        @:<div class="card invisible"></div>
+                                        }
+                                        else if(i % 3 == 0)
+                                        {
+                        @:<div class="card invisible"></div>
+                        @:<div class="card invisible"></div>
+                                        }
+                                    }
+                    @:</div>
+                            }
+                        }
+
+                                        <div class="row mt-5">
+                                            <div class="col-sm-6">
+                                                @if (Model.CurrentPage<Model.PageCount)
+                                                            {
+                                                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage + 1)" class="btn btn-primary"><i class="fa fa-arrow-left"></i> Previous posts</a>
+                                                            }
+                                            </div>
+                                            <div class="col-sm-6 text-right">
+                                                @if (Model.CurrentPage > 1)
+                                                            {
+                                                <a asp-controller="Posts" asp-action="Index" asp-route-pagenumber="@(Model.CurrentPage - 1)" class="btn btn-primary">Newer posts <i class="fa fa-arrow-right"></i></a>
+                                                            }
+                                            </div>
+                                        </div>
 </div>
